# habits_assistant

./: .env_sample  .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_user.py
reports/flake-report/: index.html
reports/htmlcov/: d_1df033120bbcc412___init___py.html  d_1df033120bbcc412_csu_py.html  d_1df033120bbcc412_cu_py.html  d_1ea838694151cac8___init___py.html  d_1ea838694151cac8_asgi_py.html  d_1ea838694151cac8_celery_py.html  d_1ea838694151cac8_settings_py.html  d_1ea838694151cac8_urls_py.html  d_1ea838694151cac8_wsgi_py.html  d_306da91e26d1596c_0001_initial_py.html  d_306da91e26d1596c_0002_initial_py.html  d_306da91e26d1596c_0003_alter_habit_user_py.html  d_306da91e26d1596c___init___py.html  d_799887e2301a09ca___init___py.html  d_799887e2301a09ca_admin_py.html  d_799887e2301a09ca_apps_py.html  d_799887e2301a09ca_models_py.html  d_799887e2301a09ca_paginators_py.html  d_799887e2301a09ca_permissions_py.html  d_799887e2301a09ca_serializers_py.html  d_799887e2301a09ca_services_py.html  d_799887e2301a09ca_tasks_py.html  d_799887e2301a09ca_tests_py.html  d_799887e2301a09ca_urls_py.html  d_799887e2301a09ca_validators_py.html  d_799887e2301a09ca_views_py.html  d_8b562f3fe71efc7d___init___py.html  d_f6c68bdc9becfc1e___init___py.html  d_f6c68bdc9becfc1e_admin_py.html  d_f6c68bdc9becfc1e_apps_py.html  (+12 more)
users/: models.py  serializers.py  tests.py  urls.py  views.py
(+5 files in other folders)
