[tool.poetry]
name = "habits-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "habits_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
ipython = "^8.17.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
celery = "^5.3.5"
redis = "^5.0.1"
pytelegrambotapi = "^4.14.0"
django-celery-beat = "^2.5.0"
eventlet = "^0.33.3"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
coverage = "^7.3.2"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
